--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+simplesamlphp-themesurfnet (20140715) unstable; urgency=medium
+
+  * Fix stray '; on error page.
+
+ -- Thijs Kinkhorst <thijs@debian.org>  Tue, 15 Jul 2014 14:15:46 +0200
+
 simplesamlphp-themesurfnet (20130709) unstable; urgency=low
 
   * Add SURFnet logo.
